better counter behaviour when competing controls. no longer gets stuck

--- a/isaac-four-souls/client/style.scss
+++ b/isaac-four-souls/client/style.scss
@@ -138,19 +138,19 @@ body {
   }
 
   [player="1"] .d6 .die-face {
-    background-color: #e33;
+    background-color: #f66;
   }
 
   [player="2"] .d6 .die-face {
-    background-color: #3e3;
+    background-color: #6c6;
   }
 
   [player="3"] .d6 .die-face {
-    background-color: #33e;
+    background-color: #66f;
   }
 
   [player="4"] .d6 .die-face {
-    background-color: #993;
+    background-color: #b0f;
   }
 
   .card {
