--- a/typ-client/style.scss
+++ b/typ-client/style.scss
@@ -173,9 +173,9 @@ button {
       border-radius: 50%;
       box-shadow: inset -0.05rem 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
       display: block;
-      height: .4rem;
+      height: .5rem;
       justify-self: center;
-      width: .4rem;
+      width: .5rem;
     }
     &[data-face="1"] {
       transform: rotate3d(0, 0, 0, 90deg) translateZ(1.3rem);
